once again, from the top

--- a/posts/f12.md
+++ b/posts/f12.md
@@ -109,7 +109,7 @@ Ey presto! Play is pressed!
 
 ### The end is nigh! 
 
-Armed with this knowledge we can actually start traversing every button, weeing what codes is sent in the "onclick" event,
+Armed with this knowledge we can actually start traversing every button, seeing what codes is sent in the "onclick" event,
 
 and use the network monitor to verify finds and see what more data is sent and/or received.
 
