and some links....

--- a/posts/f12.md
+++ b/posts/f12.md
@@ -8,7 +8,7 @@ Know the feeling? I imagine everyone does.
 
 When I end up like this, I tend to go play some guitar instead.
 
-So I recently switched DAW [and wrote about it here](changingdaw.md "How I switched DAW and lived to tell the tale."), which gave me some new interesting things to do...
+So I recently switched DAW [and wrote about it here](posts/changingdaw.md "How I switched DAW and lived to tell the tale."), which gave me some new interesting things to do...
 
 ### I just recently read a really good blogpost
 
