az204 - The final frontier

--- a/posts/az204.pt4.md
+++ b/posts/az204.pt4.md
@@ -1,5 +1,18 @@
 # Lets learn some Azure! Az204 Pt.4 - Develop solutions that use Blob storage
 
+This is the fourth post in a series called `Let's learn some Azure! Az204`.
+To read them all, and in the right order, start here:
+
+- [pt. 1 - Space....](posts/az204.pt1.md)
+- [pt. 2 - App services](posts/az204.pt2.md)
+- [pt. 3 - Implement Azure Functions](posts/az204.pt3.md)
+- [pt. 4 - Develop solutions that use Blob storage](posts/az204.pt4.md)
+- [pt. 5 - Develop solutions that use Azure Cosmos DB](posts/az204.pt5.md)
+- [pt. 6 - Onwards and upwards. ACR, ACI, and ACA.](posts/az204.pt6.md)
+- [pt. 7 - The final frontier!](posts/az204.pt7.md)
+
+----
+
 One more of those chapters I feel comfortable with.
 
 Is probably what I should say if it wasn't for the fact that yesterday I renewed two of my certificates, Azure Administrator Associate and DevOps Engineer Expert. I did get them both renewed, but I actually failed the Blob storage lifecycle chapter! (I don't remember which one of those two it was that had this chapter..)
