--- a/posts/az204.pt5.md
+++ b/posts/az204.pt5.md
@@ -1,5 +1,18 @@
 # Lets learn some Azure! Az204 Pt.5 - Develop solutions that use Azure Cosmos DB
 
+This is the fifth post in a series called `Let's learn some Azure! Az204`.
+To read them all, and in the right order, start here:
+
+- [pt. 1 - Space....](posts/az204.pt1.md)
+- [pt. 2 - App services](posts/az204.pt2.md)
+- [pt. 3 - Implement Azure Functions](posts/az204.pt3.md)
+- [pt. 4 - Develop solutions that use Blob storage](posts/az204.pt4.md)
+- [pt. 5 - Develop solutions that use Azure Cosmos DB](posts/az204.pt5.md)
+- [pt. 6 - Onwards and upwards. ACR, ACI, and ACA.](posts/az204.pt6.md)
+- [pt. 7 - The final frontier!](posts/az204.pt7.md)
+
+----
+
 ![I know nothing about this - gif](../images/az204.pt5/knownothing.gif)
 
 From the easy to me feeling like a mess.. This is super hard!
