--- a/posts/az204.pt6.md
+++ b/posts/az204.pt6.md
@@ -1,5 +1,18 @@
 # Lets learn some Azure! Az204 Pt.6 - Onwards and upwards
 
+This is the sixth post in a series called `Let's learn some Azure! Az204`.
+To read them all, and in the right order, start here:
+
+- [pt. 1 - Space....](posts/az204.pt1.md)
+- [pt. 2 - App services](posts/az204.pt2.md)
+- [pt. 3 - Implement Azure Functions](posts/az204.pt3.md)
+- [pt. 4 - Develop solutions that use Blob storage](posts/az204.pt4.md)
+- [pt. 5 - Develop solutions that use Azure Cosmos DB](posts/az204.pt5.md)
+- [pt. 6 - Onwards and upwards. ACR, ACI, and ACA.](posts/az204.pt6.md)
+- [pt. 7 - The final frontier!](posts/az204.pt7.md)
+
+----
+
 I've been away for a screen-detox vacation for a couple of days. Camping, fishing, and spending quality time with the kiddos in the Swedish mountains is good for the soul.
 
 Unfortunately, it is not good for my time planning. I'm a notorious time enthusiast, and I am kind of realizing I have to speed up the training in order to make it through before the test.
