--- a/posts/az204.pt1.md
+++ b/posts/az204.pt1.md
@@ -1,4 +1,17 @@
-## Lets learn some Azure! Az204 Pt.1
+# Lets learn some Azure! Az204 Pt.1
+
+This is the first post in a series called `Let's learn some Azure! Az204`.
+To read them all, and in the right order, start here:
+
+- [pt. 1 - Space....](posts/az204.pt1.md)
+- [pt. 2 - App services](posts/az204.pt2.md)
+- [pt. 3 - Implement Azure Functions](posts/az204.pt3.md)
+- [pt. 4 - Develop solutions that use Blob storage](posts/az204.pt4.md)
+- [pt. 5 - Develop solutions that use Azure Cosmos DB](posts/az204.pt5.md)
+- [pt. 6 - Onwards and upwards. ACR, ACI, and ACA.](posts/az204.pt6.md)
+- [pt. 7 - The final frontier!](posts/az204.pt7.md)
+
+----
 
 For quite some time I've been meaning to get the [Az-204 certification.](https://learn.microsoft.com/en-us/certifications/azure-developer/)
 
