--- a/posts/az204.pt2.md
+++ b/posts/az204.pt2.md
@@ -1,5 +1,18 @@
 # Lets learn some Azure! Az204 Pt.2 - App services
 
+This is the second post in a series called `Let's learn some Azure! Az204`.
+To read them all, and in the right order, start here:
+
+- [pt. 1 - Space....](posts/az204.pt1.md)
+- [pt. 2 - App services](posts/az204.pt2.md)
+- [pt. 3 - Implement Azure Functions](posts/az204.pt3.md)
+- [pt. 4 - Develop solutions that use Blob storage](posts/az204.pt4.md)
+- [pt. 5 - Develop solutions that use Azure Cosmos DB](posts/az204.pt5.md)
+- [pt. 6 - Onwards and upwards. ACR, ACI, and ACA.](posts/az204.pt6.md)
+- [pt. 7 - The final frontier!](posts/az204.pt7.md)
+
+----
+
 Head first in to the learning path, the first chapter of out journey is [Implement Azure App Service web apps](https://learn.microsoft.com/en-us/training/paths/create-azure-app-service-web-apps/).
 
 Instead of me just repeating the learning chapters I though a good way for me to remember what I actually read would be to try to explain each part using my own words.
