--- a/posts/az204.pt3.md
+++ b/posts/az204.pt3.md
@@ -1,5 +1,18 @@
 # Lets learn some Azure! Az204 Pt.3 - Implement Azure Functions
 
+This is the third post in a series called `Let's learn some Azure! Az204`.
+To read them all, and in the right order, start here:
+
+- [pt. 1 - Space....](posts/az204.pt1.md)
+- [pt. 2 - App services](posts/az204.pt2.md)
+- [pt. 3 - Implement Azure Functions](posts/az204.pt3.md)
+- [pt. 4 - Develop solutions that use Blob storage](posts/az204.pt4.md)
+- [pt. 5 - Develop solutions that use Azure Cosmos DB](posts/az204.pt5.md)
+- [pt. 6 - Onwards and upwards. ACR, ACI, and ACA.](posts/az204.pt6.md)
+- [pt. 7 - The final frontier!](posts/az204.pt7.md)
+
+----
+
 Back on the horse, this time for a shorter post. The Azure Functions chapter is but two modules.
 Given that I have done quite a lot of work on Azure Functions before I wont spend all to much time here. If you haven't, I suggest at least do more than brush through it like I did.
 
