Change to MVP tracking links

--- a/posts/az204.pt1.md
+++ b/posts/az204.pt1.md
@@ -13,7 +13,7 @@ To read them all, and in the right order, start here:
 
 ----
 
-For quite some time I've been meaning to get the [Az-204 certification.](https://learn.microsoft.com/en-us/certifications/azure-developer/)
+For quite some time I've been meaning to get the [Az-204 certification.](https://learn.microsoft.com/certifications/azure-developer?wt.mc_id=DT-MVP-5005317)
 
 I currently have 10*, 30*, and 40*, which gives me... Three shields and a number of stars if I'm not wrong, but not having the 200 series has bugged me.
 
@@ -29,7 +29,7 @@ This will be the first in a series of posts where I try to go through my process
  
 ## Starting out
 
-Unless you already clicked the link above, the obvious place to start is [here](https://learn.microsoft.com/en-us/certifications/azure-developer/). The actual page of the exam. 
+Unless you already clicked the link above, the obvious place to start is [here](https://learn.microsoft.com/certifications/azure-developer?wt.mc_id=DT-MVP-5005317). The actual page of the exam. 
 
 There is a small but important note on all exam pages named `Skills measured`. This is what we will spend the next months learning everything there is to know about.
 
@@ -41,7 +41,7 @@ One thing that _isn't_ linked there, but may be a good thing to check is the [ce
 
 The first thing I like to do is take a practice exam. This gives me somewhat of a hint of what I am missing, and what topics I need to study more on.
 
-I used to get my practice exams from [MeasureUp](https://www.measureup.com/microsoft-practice-test-az-204-developing-solutions-for-microsoft-azure.html), but quite recently Microsoft decided to create [their own practice exams as well!](https://learn.microsoft.com/en-us/certifications/exams/az-204/practice/assessment?assessment-type=practice&assessmentId=35)
+I used to get my practice exams from [MeasureUp](https://www.measureup.com/microsoft-practice-test-az-204-developing-solutions-for-microsoft-azure.html), but quite recently Microsoft decided to create [their own practice exams as well!](https://learn.microsoft.com/certifications/exams/az-204/practice/assessment?assessment-type=practice&assessmentId=35&wt.mc_id=DT-MVP-5005317)
 
 The MeasureUp test is way more flexible, has a bigger selection of topics and settings, and replicates the testing experience almost 100%, and If you can afford it I can highly recommend them, but this time I'm opting for the free Microsoft one as it still gives me a good bit of knowledge and a decent assessment.
 
