--- a/posts/az204.pt2.md
+++ b/posts/az204.pt2.md
@@ -13,7 +13,7 @@ To read them all, and in the right order, start here:
 
 ----
 
-Head first in to the learning path, the first chapter of out journey is [Implement Azure App Service web apps](https://learn.microsoft.com/en-us/training/paths/create-azure-app-service-web-apps/).
+Head first in to the learning path, the first chapter of out journey is [Implement Azure App Service web apps](https://learn.microsoft.com/training/paths/create-azure-app-service-web-apps?wt.mc_id=DT-MVP-5005317).
 
 Instead of me just repeating the learning chapters I though a good way for me to remember what I actually read would be to try to explain each part using my own words.
 
@@ -60,7 +60,7 @@ There are some differences depending on what size SKU you select, and here is so
 > - Basic: Manual scaling
 > - Standard, Premium, and Isolated: Automatic scaling
 
-Some good learning here would probably be to go through the [pricing plan](https://azure.microsoft.com/en-us/pricing/details/app-service/windows/), even though you don't need to know it by heart.
+Some good learning here would probably be to go through the [pricing plan](https://azure.microsoft.com/pricing/details/app-service/windows?wt.mc_id=DT-MVP-5005317), even though you don't need to know it by heart.
 
 Last but not least in the fly over of App services: Deployment slots. A great feature that allows you to deploy a new version of an app in the same host, but with its own hostname. This lets you deploy a new version of an app, let is start up properly, then switch production over when you are ready. Again though, depending on SKU:
 
@@ -68,7 +68,7 @@ Last but not least in the fly over of App services: Deployment slots. A great fe
 >
 > Answer: Standard or better.
 
-[More good reading on SKUs and limits can be found here](https://learn.microsoft.com/en-us/azure/azure-resource-manager/management/azure-subscription-service-limits#app-service-limits)
+[More good reading on SKUs and limits can be found here](https://learn.microsoft.com/azure/azure-resource-manager/management/azure-subscription-service-limits?wt.mc_id=DT-MVP-5005317#app-service-limits)
 
 ### Authentication
 
@@ -199,7 +199,7 @@ Once you activate a setting you also get to set the log levels. As expected, the
 
 Like I said I got a question on the test exam on this topic. I'm not going to answer it for you, but _do read this part of the training material!_
 
-[![read this! It's important.](../images/az204.pt2/6.png)](https://learn.microsoft.com/en-us/training/modules/configure-web-app-settings/5-enable-diagnostic-logging)
+[![read this! It's important.](../images/az204.pt2/6.png)](https://learn.microsoft.com/training/modules/configure-web-app-settings/5-enable-diagnostic-logging?wt.mc_id=DT-MVP-5005317)
 
 > Pop quiz: You use the command `System.Diagnostics.Trace.TraceError("If you're seeing this, something bad happened");` to generate an error from your app. Which log would you see this message in?
 >
@@ -317,6 +317,6 @@ I hope you enjoyed it and that it can help you pass the exam eventually. Or me. 
 
 If you have any feedback on format, complains on content, or want to correct me somewhere, give me a shout at [my mastodon page](https://mastodon.nu/@bjompen)
 
-And no matter what, tomorrow I'm starting chapter 2: [implement azure functions/](https://learn.microsoft.com/en-us/training/paths/implement-azure-functions/)
+And no matter what, tomorrow I'm starting chapter 2: [implement azure functions/](https://learn.microsoft.com/training/paths/implement-azure-functions?wt.mc_id=DT-MVP-5005317)
 
 Onwards towards another shield we go!
