--- a/posts/az204.pt3.md
+++ b/posts/az204.pt3.md
@@ -28,7 +28,7 @@ Scaling is based on a "per Function app" basis, which means all your functions r
 
 Just like with web apps, Functions supports scaling in and out, network integrations, custom domains, and a lot of other nifty things.
 
-There is also a feature for Azure functions that I think is really cool called [Durable functions](https://learn.microsoft.com/en-us/azure/azure-functions/durable/durable-functions-overview?tabs=csharp-inproc), but since those are just mentioned briefly here I am guessing there will be no reason to spend time on them right now.
+There is also a feature for Azure functions that I think is really cool called [Durable functions](https://learn.microsoft.com/azure/azure-functions/durable/durable-functions-overview?tabs=csharp-inproc&wt.mc_id=DT-MVP-5005317), but since those are just mentioned briefly here I am guessing there will be no reason to spend time on them right now.
 
 ### Hosting options and scaling
 
@@ -66,7 +66,7 @@ Both of these requirements are set using a _functions.json_ file if you are usin
 
 Other than that your structure kind of depends on what language you are creating your code in.
 
-One important detail is that you _do not hard code data such as connection strings_ in your config files. This is because you can have a [local settings file](https://learn.microsoft.com/en-us/azure/azure-functions/functions-develop-local#local-settings-file) on your machine that lets you use development data, while app settings on your function are used in production.
+One important detail is that you _do not hard code data such as connection strings_ in your config files. This is because you can have a [local settings file](https://learn.microsoft.com/azure/azure-functions/functions-develop-local?wt.mc_id=DT-MVP-5005317#local-settings-file) on your machine that lets you use development data, while app settings on your function are used in production.
 
 Since I haven't had one of them here yet, I'm going to end this post with not one, but two...
 
