--- a/posts/az204.pt4.md
+++ b/posts/az204.pt4.md
@@ -51,7 +51,7 @@ Like mentioned you have three different tiers of a storage, Hot, Cold, and Archi
 
 Setting this up is done using rules written in json or created in a GUI which writes the json for you.
 
-A rule needs a filter, for example "blobs not accessed for 20 days, and starting with the name MyBlob", and an action, for example "move this file to archive". There is an example included [in the module](https://learn.microsoft.com/en-us/training/modules/manage-azure-blob-storage-lifecycle/4-add-policy-blob-storage) well worth looking at.
+A rule needs a filter, for example "blobs not accessed for 20 days, and starting with the name MyBlob", and an action, for example "move this file to archive". There is an example included [in the module](https://learn.microsoft.com/training/modules/manage-azure-blob-storage-lifecycle/4-add-policy-blob-storage?wt.mc_id=DT-MVP-5005317) well worth looking at.
 
 You can set up rules to move between any and all tiers _apart from one_: you can not automatically move from Archive to any other. Archived files are considered offline. In order to get it back ("rehydrate" is the word) you have to either copy the file to an online container, or change the tier of the blob manually. 
 
