--- a/posts/az204.pt5.md
+++ b/posts/az204.pt5.md
@@ -69,7 +69,7 @@ As Cosmos DB is globally distributed, and data does take time to sync across reg
 
 In all different consistency layers except strong you replicate data through _at least_ three different replicas in a region
 
-There are five layers of consistency available, and I do recommend reading [the learn chapter](https://learn.microsoft.com/en-us/azure/cosmos-db/consistency-levels) to get a good grasp of this. I imagine questions surrounding this might show up on a test. I'll try to explain them here.
+There are five layers of consistency available, and I do recommend reading [the learn chapter](https://learn.microsoft.com/azure/cosmos-db/consistency-levels?wt.mc_id=DT-MVP-5005317) to get a good grasp of this. I imagine questions surrounding this might show up on a test. I'll try to explain them here.
 
 - Strong
     - If you write anything to _any_ region, and perform a query, you _will_ get the latest data result. This requires the replication to pass through all regions, and therefore is the slowest. It will _always_ give you the latest data though.
