--- a/posts/az204.pt7.md
+++ b/posts/az204.pt7.md
@@ -23,7 +23,7 @@ And this morning it was certification time!
 
 ### But before this, some last tips!
 
-One thing that I had big issues with was the chapters on [Azure Event Grid](https://learn.microsoft.com/en-us/azure/event-grid/), [Azure Event Hub](https://learn.microsoft.com/en-us/azure/event-hubs/event-hubs-about), and [Azure Service Bus](https://learn.microsoft.com/en-us/azure/service-bus-messaging/service-bus-messaging-overview).
+One thing that I had big issues with was the chapters on [Azure Event Grid](https://learn.microsoft.com/azure/event-grid?wt.mc_id=DT-MVP-5005317), [Azure Event Hub](https://learn.microsoft.com/en-us/azure/event-hubs/event-hubs-about), and [Azure Service Bus](https://learn.microsoft.com/en-us/azure/service-bus-messaging/service-bus-messaging-overview).
 
 Not because they were particularly hard themselves, they are all message services with pub/sub functionality, but because the chapters on them pretty much explained them in the same way, and I found it lacked good examples of when to use which one.
 
@@ -64,7 +64,7 @@ Anyway, today then...
 
 I honestly don't think I've ever been this nervous over a test. I even threw up when going to the car! (yes, for real!)
 
-But I did get to the test centre on time. You can book a certificate exam at home too, but [I don't think any of my rooms would fulfil the requirements](https://learn.microsoft.com/en-us/certifications/online-exams).
+But I did get to the test centre on time. You can book a certificate exam at home too, but [I don't think any of my rooms would fulfil the requirements](https://learn.microsoft.com/certifications/online-exams?wt.mc_id=DT-MVP-5005317).
 
 Sitting in a room next to people may seem intimidating as well, but the cover screens are big enough to make you forget other people are there.
 
@@ -81,7 +81,7 @@ I did it!
 ## Final notes
 
 So goes another summer, and what a summer. MVP, MCT, and now this. 
-maybe next vacation it's time for [az 500](https://learn.microsoft.com/en-us/certifications/exams/az-500/), but for now I don't want to study for at least a month.
+maybe next vacation it's time for [az 500](https://learn.microsoft.com/certifications/exams/az-500?wt.mc_id=DT-MVP-5005317), but for now I don't want to study for at least a month.
 
 Right now I need a bit of sleep, and then prepare for my next presentation at [Data Moshpit](https://www.data-moshpit.com/). Will I see you in Berlin?
 
